--- a/coldDrinks.html
+++ b/coldDrinks.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>GreenCart</title>
-  <link rel="icon" href="favicon.svg" type="image/x-icon">
+  <link rel="icon" href="assets/favicon.svg" type="image/x-icon">
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
     <header class="navbar">
       <div class="logo">
-        <img src="logo.svg" alt="Logo">
+        <img src="assets/logo.svg" alt="Logo">
       </div>
       <div id="secRight">
         <nav class="nav-links">
@@ -38,7 +38,7 @@
         <div class="categories-grid" id="all-products-grid">
    
           <div class="product-card">
-            <img src="coca_cola_image.png" alt="Coca Cola">
+            <img src="assets/coca_cola_image.png" alt="Coca Cola">
             <p class="product-type">Cold Drinks</p>
             <h3 class="product-name">Coca Cola 1.5L</h3>
             <div class="rating">★★★★☆ (4)</div>
@@ -50,7 +50,7 @@
           </div>
     
           <div class="product-card">
-            <img src="sprite_image_1.png" alt="Spirite">
+            <img src="assets/sprite_image_1.png" alt="Spirite">
             <p class="product-type">Cold Drinks</p>
             <h3 class="product-name">Spirite 1.5L</h3>
             <div class="rating">★★★★☆ (4)</div>
@@ -62,7 +62,7 @@
           </div>
     
           <div class="product-card">
-            <img src="seven_up_image_1.png" alt="7Up">
+            <img src="assets/seven_up_image_1.png" alt="7Up">
             <p class="product-type">Cold Drinks</p>
             <h3 class="product-name">7 Up 1.5L</h3>
             <div class="rating">★★★★★ (4)</div>
@@ -74,7 +74,7 @@
           </div>
 
           <div class="product-card">
-            <img src="fanta_image_1.png" alt="Spinach">
+            <img src="assets/fanta_image_1.png" alt="Spinach">
             <p class="product-type">Cold Drinks</p>
             <h3 class="product-name">Fanta 1.5L</h3>
             <div class="rating">★★★★☆ (4)</div>
@@ -94,7 +94,7 @@
       <footer class="footer">
         <div class="footer-content">
           <div class="footer-about">
-            <img class="footer-logo" src="logo.svg" alt="Logo">
+            <img class="footer-logo" src="assets/logo.svg" alt="Logo">
             <p>
               We deliver fresh groceries and snacks straight to your door. Trusted by thousands, we aim to make your shopping experience simple and affordable.
             </p>
