--- a/allProducts.html
+++ b/allProducts.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>GreenCart - All Products</title>
-  <link rel="icon" href="favicon.svg" type="image/x-icon">
+  <link rel="icon" href="assets/favicon.svg" type="image/x-icon">
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
   <header class="navbar">
     <div class="logo">
-      <img src="logo.svg" alt="Logo">
+      <img src="assets/logo.svg" alt="Logo">
     </div>
     <div id="secRight">
       <nav class="nav-links">
@@ -39,7 +39,7 @@
     <div class="categories-grid" id="all-products-grid">
       <!-- Row 1 -->
       <div class="product-card">
-        <img src="potato_image_1.png" alt="Potato">
+        <img src="assets/potato_image_1.png" alt="Potato">
         <p class="product-type">Vegetables</p>
         <h3 class="product-name">Potato 500g</h3>
         <div class="rating">★★★★☆ (4)</div>
@@ -51,7 +51,7 @@
       </div>
 
       <div class="product-card">
-        <img src="tomato_image.png" alt="Tomato">
+        <img src="assets/tomato_image.png" alt="Tomato">
         <p class="product-type">Vegetables</p>
         <h3 class="product-name">Tomato 1kg</h3>
         <div class="rating">★★★★☆ (4)</div>
@@ -63,7 +63,7 @@
       </div>
 
       <div class="product-card">
-        <img src="carrot_image.png" alt="Carrot">
+        <img src="assets/carrot_image.png" alt="Carrot">
         <p class="product-type">Vegetables</p>
         <h3 class="product-name">Carrot 500g</h3>
         <div class="rating">★★★★☆ (4)</div>
@@ -75,7 +75,7 @@
       </div>
 
       <div class="product-card">
-        <img src="spinach_image_1.png" alt="Spinach">
+        <img src="assets/spinach_image_1.png" alt="Spinach">
         <p class="product-type">Vegetables</p>
         <h3 class="product-name">Spinach 500g</h3>
         <div class="rating">★★★★☆ (4)</div>
@@ -87,7 +87,7 @@
       </div>
 
       <div class="product-card">
-        <img src="onion_image_1.png" alt="Onion">
+        <img src="assets/onion_image_1.png" alt="Onion">
         <p class="product-type">Vegetables</p>
         <h3 class="product-name">Onion 500g</h3>
         <div class="rating">★★★★☆ (4)</div>
@@ -100,7 +100,7 @@
 
       <!-- Row 2 -->
       <div class="product-card">
-        <img src="apple_image.png" alt="Apple">
+        <img src="assets/apple_image.png" alt="Apple">
         <p class="product-type">Fruits</p>
         <h3 class="product-name">Apple (4 pcs)</h3>
         <div class="rating">★★★★☆ (4)</div>
@@ -112,7 +112,7 @@
       </div>
 
       <div class="product-card">
-        <img src="amul_milk_image.png" alt="Milk">
+        <img src="assets/amul_milk_image.png" alt="Milk">
         <p class="product-type">Dairy</p>
         <h3 class="product-name">Milk 500ml</h3>
         <div class="rating">★★★★★ (5)</div>
@@ -124,7 +124,7 @@
       </div>
 
       <div class="product-card">
-        <img src="coca_cola_image.png" alt="Cola">
+        <img src="assets/coca_cola_image.png" alt="Cola">
         <p class="product-type">Drinks</p>
         <h3 class="product-name">Cola 1L</h3>
         <div class="rating">★★★★☆ (4)</div>
@@ -136,7 +136,7 @@
       </div>
 
       <div class="product-card">
-        <img src="basmati_rice_image.png" alt="Rice">
+        <img src="assets/basmati_rice_image.png" alt="Rice">
         <p class="product-type">Grains</p>
         <h3 class="product-name">White Rice 5kg</h3>
         <div class="rating">★★★★★ (5)</div>
@@ -148,7 +148,7 @@
       </div>
 
       <div class="product-card">
-        <img src="brown_bread_image.png" alt="Bread">
+        <img src="assets/brown_bread_image.png" alt="Bread">
         <p class="product-type">Bakery</p>
         <h3 class="product-name">Wheat Bread</h3>
         <div class="rating">★★★★☆ (4)</div>
@@ -169,7 +169,7 @@
   <footer class="footer">
     <div class="footer-content">
       <div class="footer-about">
-        <img class="footer-logo" src="logo.svg" alt="Logo">
+        <img class="footer-logo" src="assets/logo.svg" alt="Logo">
         <p>
           We deliver fresh groceries and snacks straight to your door. Trusted by thousands, we aim to make your shopping experience simple and affordable.
         </p>
