--- a/instantFood.html
+++ b/instantFood.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>GreenCart</title>
-  <link rel="icon" href="favicon.svg" type="image/x-icon">
+  <link rel="icon" href="assets/favicon.svg" type="image/x-icon">
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
     <header class="navbar">
       <div class="logo">
-        <img src="logo.svg" alt="Logo">
+        <img src="assets/logo.svg" alt="Logo">
       </div>
       <div id="secRight">
         <nav class="nav-links">
@@ -38,7 +38,7 @@
         <div class="categories-grid" id="all-products-grid">
 
           <div class="product-card">
-            <img src="maggi_image.png" alt="Potato">
+            <img src="assets/maggi_image.png" alt="Potato">
             <p class="product-type">Instant</p>
             <h3 class="product-name">Maggi Noodles 100g</h3>
             <div class="rating">★★★★☆ (4)</div>
@@ -50,7 +50,7 @@
           </div>
       
           <div class="product-card">
-            <img src="knorr_soup_image.png" alt="Tomato">
+            <img src="assets/knorr_soup_image.png" alt="Tomato">
             <p class="product-type">Instant</p>
             <h3 class="product-name">Knorr Cup Soup 70g</h3>
             <div class="rating">★★★★☆ (4)</div>
@@ -70,7 +70,7 @@
       <footer class="footer">
         <div class="footer-content">
           <div class="footer-about">
-            <img class="footer-logo" src="logo.svg" alt="Logo">
+            <img class="footer-logo" src="assets/logo.svg" alt="Logo">
             <p>
               We deliver fresh groceries and snacks straight to your door. Trusted by thousands, we aim to make your shopping experience simple and affordable.
             </p>
