--- a/dairyProducts.html
+++ b/dairyProducts.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>GreenCart</title>
-  <link rel="icon" href="favicon.svg" type="image/x-icon">
+  <link rel="icon" href="assets/favicon.svg" type="image/x-icon">
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
     <header class="navbar">
       <div class="logo">
-        <img src="logo.svg" alt="Logo">
+        <img src="assets/logo.svg" alt="Logo">
       </div>
       <div id="secRight">
         <nav class="nav-links">
@@ -104,7 +104,7 @@
       <footer class="footer">
         <div class="footer-content">
           <div class="footer-about">
-            <img class="footer-logo" src="logo.svg" alt="Logo">
+            <img class="footer-logo" src="assets/logo.svg" alt="Logo">
             <p>
               We deliver fresh groceries and snacks straight to your door. Trusted by thousands, we aim to make your shopping experience simple and affordable.
             </p>
